# binapi

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp
examples/synchronous/: main.cpp
examples/trader/: CMakeLists.txt  main.cpp
examples/websockets/: CMakeLists.txt
include/binapi/: api.hpp  flatjson.hpp  marco.h  reports.h  tools.h  types.hpp  websocket.h
scripts/: build.sh
src/: api.cpp  pairslist.cpp  reports.cpp  tools.cpp  types.cpp  websocket.cpp
